Added searchable map to maps page. Set up maps router on server side.

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "axios": "^0.19.2",
     "body-parser": "^1.19.0",
     "concurrently": "^4.1.0",
+    "deck.gl": "^8.0.16",
     "express": "^4.17.1",
     "mapbox-gl": "^0.38.0",
     "mocha": "^6.2.1",
