--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "mongoose": "^5.7.1",
     "morgan": "^1.9.1",
     "nodemon": "^1.18.10",
+    "react-google-maps": "^9.4.5",
     "react-map-gl": "^5.2.3",
     "react-map-gl-draw": "^0.17.2",
     "react-map-gl-geocoder": "^2.0.11",
