--- a/package.json
+++ b/package.json
@@ -30,6 +30,9 @@
     "mongoose": "^5.7.1",
     "morgan": "^1.9.1",
     "nodemon": "^1.18.10",
+    "react": "^16.13.0",
+    "react-bootstrap": "^1.0.0-beta.17",
+    "react-dom": "^16.13.0",
     "react-geolocated": "^3.0.1",
     "react-google-location": "^1.2.2",
     "react-google-maps": "^9.4.5",
@@ -37,6 +40,8 @@
     "react-map-gl": "^5.2.3",
     "react-map-gl-draw": "^0.17.2",
     "react-map-gl-geocoder": "^2.0.11",
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "^3.4.0",
     "request": "^2.88.2",
     "require": "^2.4.20",
     "should": "^13.2.3",
