--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "body-parser": "^1.19.0",
     "bootstrap": "^4.4.1",
     "concurrently": "^4.1.0",
+    "date-fns": "^2.11.1",
     "express": "^4.17.1",
     "mocha": "^6.2.1",
     "mongoose": "^5.7.1",
@@ -32,6 +33,7 @@
     "nodemon": "^1.18.10",
     "react-bootstrap": "^1.0.0-beta.17",
     "react-google-maps": "^9.4.5",
+    "react-nice-dates": "^2.0.1",
     "should": "^13.2.3",
     "supertest": "^4.0.2"
   },
