--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   "dependencies": {
     "axios": "^0.19.2",
     "body-parser": "^1.19.0",
-    "bootstrap": "^4.4.1",
+    "bootstrap": "^4.1.3",
     "concurrently": "^4.1.0",
     "express": "^4.17.1",
     "mocha": "^6.2.1",
@@ -33,7 +33,17 @@
     "react-bootstrap": "^1.0.0-beta.17",
     "react-google-maps": "^9.4.5",
     "should": "^13.2.3",
-    "supertest": "^4.0.2"
+    "supertest": "^4.0.2",
+    "history": "^4.7.2",
+    "input-moment": "^0.4.0",
+    "jquery": "^3.3.1",
+    "lodash": "^4.17.11",
+    "moment": "^2.22.2",
+    "popper.js": "^1.14.4",
+    "react-redux": "^5.0.7",
+    "redux": "^4.0.0",
+    "redux-thunk": "^2.3.0",
+    "uuid": "^3.3.2"
   },
   "homepage": "https://github.com/UFWebApps/React_Template_Repo#readme"
 }
