--- a/package.json
+++ b/package.json
@@ -30,10 +30,11 @@
     "express": "^4.17.1",
     "history": "^4.7.2",
     "input-moment": "^0.4.0",
+    "is-empty": "^1.2.0",
     "jquery": "^3.3.1",
-    "lodash": "^4.17.11",
     "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^2.2.0",
+    "lodash": "^4.17.11",
     "mocha": "^6.2.1",
     "moment": "^2.22.2",
     "mongoose": "^5.9.6",
@@ -48,7 +49,8 @@
     "redux-thunk": "^2.3.0",
     "should": "^13.2.3",
     "supertest": "^4.0.2",
-    "uuid": "^3.3.2"
+    "uuid": "^3.3.2",
+    "validator": "^13.0.0"
   },
   "homepage": "https://github.com/UFWebApps/React_Template_Repo#readme"
 }
