--- a/package.json
+++ b/package.json
@@ -36,11 +36,12 @@
     "jwt-decode": "^2.2.0",
     "lodash": "^4.17.11",
     "mocha": "^6.2.1",
-    "moment": "^2.22.2",
+    "moment": "^2.24.0",
     "mongoose": "^5.9.6",
     "morgan": "^1.9.1",
     "nodemon": "^1.18.10",
     "popper.js": "^1.14.4",
+    "react-big-calendar": "^0.24.3",
     "react-bootstrap": "^1.0.0-beta.17",
     "react-google-maps": "^9.4.5",
     "react-nice-dates": "^2.0.1",
