--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "morgan": "^1.9.1",
     "nodemon": "^1.18.10",
     "popper.js": "^1.14.4",
+    "react-big-calendar": "^0.24.3",
     "react-bootstrap": "^1.0.0-beta.17",
     "react-google-maps": "^9.4.5",
     "react-nice-dates": "^2.0.1",
@@ -49,6 +50,7 @@
     "redux-thunk": "^2.3.0",
     "should": "^13.2.3",
     "supertest": "^4.0.2",
+    "twilio": "^3.42.1",
     "uuid": "^3.3.2",
     "validator": "^13.0.0"
   },
