--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "author": "Dakota Rennemann",
   "license": "MIT",
   "dependencies": {
+    "async": "^3.2.0",
     "axios": "^0.19.2",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.19.0",
@@ -39,6 +40,7 @@
     "moment": "^2.22.2",
     "mongoose": "^5.9.6",
     "morgan": "^1.9.1",
+    "nodemailer": "^6.4.6",
     "nodemon": "^1.18.10",
     "popper.js": "^1.14.4",
     "react-bootstrap": "^1.0.0-beta.17",
