--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "body-parser": "^1.19.0",
     "bootstrap": "^4.1.3",
     "concurrently": "^4.1.0",
+    "connect-flash": "^0.1.1",
     "date-fns": "^2.11.1",
     "express": "^4.17.1",
     "history": "^4.7.2",
